--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Cuba</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Football, the one where you play a ball with your feet, not an egg with your hands</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Don't know.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Austin, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Why not?</p>
     </section>
 
     <footer id="footer">
